@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: BuildShapes.cc,v 1.3 2001-07-11 10:10:23 gunter Exp $
+// $Id: BuildShapes.cc,v 1.4 2001-08-02 23:55:46 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -53,7 +53,7 @@
 
 G4VPhysicalVolume* TheWorld ()
 {
-  G4double a, iz, z, density;
+  G4double a, iz, density;
   G4String name, symbol;
   G4int nel;
   a = 14.01*g/mole;
@@ -98,11 +98,11 @@ G4VPhysicalVolume* BuildBox()
 	boxLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *boxPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						  "BoxPhys",
-						  boxLog,
-						  theWorld,
-						  false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "BoxPhys",
+			   boxLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -131,11 +131,11 @@ G4VPhysicalVolume* BuildCylinder()
 	tubsLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *tubsPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "tubsPhys",
-						   tubsLog,
-						   theWorld,
-						   false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "tubsPhys",
+			   tubsLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -165,11 +165,11 @@ G4VPhysicalVolume* BuildTubs()
 	tubsLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *tubsPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "tubsPhys",
-						   tubsLog,
-						   theWorld,
-						   false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "tubsPhys",
+			   tubsLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -199,11 +199,11 @@ G4VPhysicalVolume* BuildCons()
 	consLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *consPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "consPhys",
-						   consLog,
-						   theWorld,
-						   false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "consPhys",
+			   consLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -232,11 +232,11 @@ G4VPhysicalVolume* BuildTrd()
 	trdLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *trdPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						  "trdPhys",
-						  trdLog,
-						  theWorld,
-						  false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "trdPhys",
+			   trdLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -267,11 +267,11 @@ G4VPhysicalVolume* BuildTrap()
 	trapLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *trapPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "trapPhys",
-						   trapLog,
-						   theWorld,
-						   false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "trapPhys",
+			   trapLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -300,11 +300,11 @@ G4VPhysicalVolume* BuildSphereFull()
 	SphereLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *SpherePhys=new G4PVPlacement( 0,G4ThreeVector(),
-						     "SpherePhys",
-						     SphereLog,
-						     theWorld,
-						     false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "SpherePhys",
+			   SphereLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -333,11 +333,11 @@ G4VPhysicalVolume* BuildSphereSeg()
 	SphereLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *SpherePhys=new G4PVPlacement( 0,G4ThreeVector(),
-						     "SpherePhys",
-						     SphereLog,
-						     theWorld,
-						     false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "SpherePhys",
+			   SphereLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -368,11 +368,11 @@ G4VPhysicalVolume* BuildPara()
 	paraLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *paraPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "ParaPhys",
-						   paraLog,
-						   theWorld,
-						   false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "ParaPhys",
+			   paraLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -413,11 +413,11 @@ G4VPhysicalVolume* BuildPCon()
 	pconLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *pconPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "PconPhys",
-						   pconLog,
-						   theWorld,
-						   false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "PconPhys",
+			   pconLog,
+			   theWorld,
+			   false,0);
 
 	return theWorld;
 
@@ -462,11 +462,11 @@ G4VPhysicalVolume* BuildPGon()
 	pgonLog -> SetVisAttributes ( pVA );
 
 		//----- physical volume
-	G4PVPlacement *pgonPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "PgonPhys",
-						   pgonLog,
-						   theWorld,
-						   false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "PgonPhys",
+			   pgonLog,
+			   theWorld,
+			   false,0);
 	
 	return theWorld;
 #else
@@ -507,10 +507,10 @@ G4VPhysicalVolume* BuildForcedWireframeBox()
 						  boxLog,
 						  theWorld,
 						  false,0);
-	G4PVPlacement *tubsPhys=new G4PVPlacement( 0,G4ThreeVector(),
-						   "tubsPhys",
-						   tubsLog,
-						   boxPhys ,false,0);
+	new G4PVPlacement( 0,G4ThreeVector(),
+			   "tubsPhys",
+			   tubsLog,
+			   boxPhys ,false,0);
 	return theWorld;
 
 } // G4VPhysicalVolume* BuidlForcedWireFrameBox()
