@@ -1,7 +1,10 @@
-$Id: History,v 1.2 2000-08-03 09:15:06 gcosmo Exp $
+$Id: History,v 1.3 2001-08-02 23:55:37 johna Exp $
 
 History file for visualization/test subdirectory
 ------------------------------------------------
+
+2nd August 2001  John Allison  (test201-V03-02-00)
+- Fixed pendantic warnings and checked operation.
 
 03 August, 2000 Gabriele Cosmo (test201-V02-00-00r)
 - changed RandGauss to G4RandGauss in MySteppingAction.cc to fix
